// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag base demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      默认
    </span>
     
    <a
      class="demo-link"
    >
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
      >
        超链接
      </span>
    </a>
  </div>
</div>
`;

exports[`Tag delete demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      
      隐藏叉
    
    </span>
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
    >
      
      显示叉
    
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--info t-size-m t-tag--dark t-tag--close"
    >
      
      可删除
    
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis"
      style="max-width: 150px;"
    >
      
      默认超过八个字超出部分隐藏
    
    </span>
    <span
      class="t-tag t-tag--info t-size-m t-tag--dark"
    >
      
      添加标签
    
    </span>
  </div>
</div>
`;

exports[`Tag disabled demo works fine 1`] = `
<div
  class="tdesign-tag-disabled"
>
  <span
    class="check-tag t-tag t-tag--check t-tag--default t-tag--disabled"
  >
    失效标签
  </span>
</div>
`;

exports[`Tag icon demo works fine 1`] = `
<div
  class="tdesign-tag-icon"
>
  <div
    class="tdesign-demo-block"
  >
    
    自定义图标标签：
    
    <span
      class="custom-icon t-tag t-tag--default t-size-m t-tag--dark"
    >
      <span>
        ×
      </span>
      标签
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    图标标签：
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <svg
        class="t-icon t-icon-search"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 128C575.05800768 128 704 256.94199232 704 416 704 495.52900416 671.7644992 567.52900416 619.64675328 619.64675328L858.5096704 858.5096704 813.2548352 903.7644992 569.33373568 659.8328576C524.93400192 687.812288 472.35742272 704 416 704 256.94199232 704 128 575.05800768 128 416 128 256.94199232 256.94199232 128 416 128ZM416 192C292.28821632 192 192 292.28821632 192 416 192 539.71178368 292.28821632 640 416 640 539.71178368 640 640 539.71178368 640 416 640 292.28821632 539.71178368 192 416 192Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      标签
    </span>
  </div>
</div>
`;

exports[`Tag long-text demo works fine 1`] = `
<div
  class="tdesign-tag-ellipsis"
>
  <span
    class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis"
    style="max-width: 150px;"
    title="超长省略文本标签超长省略文本标签"
  >
    超长省略文本标签超长省略文本标签
  </span>
</div>
`;

exports[`Tag plain demo works fine 1`] = `
<div
  class="tdesign-tag-plain"
>
  <span
    class="t-tag t-tag--primary t-size-m t-tag--plain"
  >
    标签一
  </span>
   
  <span
    class="t-tag t-tag--success t-size-m t-tag--plain"
  >
    标签二
  </span>
   
  <span
    class="t-tag t-tag--info t-size-m t-tag--plain"
  >
    标签三
  </span>
   
  <span
    class="t-tag t-tag--warning t-size-m t-tag--plain"
  >
    标签四
  </span>
   
  <span
    class="t-tag t-tag--danger t-size-m t-tag--plain"
  >
    标签五
  </span>
</div>
`;

exports[`Tag selectable demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--check t-tag--default t-tag--checked"
    >
      
      选中1
    
    </span>
    <span
      class="t-tag t-tag--check t-tag--default t-tag--checked"
    >
      
      选中2
    
    </span>
    <span
      class="t-tag t-tag--check t-tag--default"
    >
      
      未选3
    
    </span>
    <span
      class="t-tag t-tag--check t-tag--default"
    >
      
      未选4
    
    </span>
  </div>
</div>
`;

exports[`Tag shape demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    
    正常：
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark"
    >
      标签一
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    圆角：
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--round"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--round"
    >
      标签一
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    标记：
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--mark"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--mark"
    >
      标签一
    </span>
  </div>
</div>
`;

exports[`Tag size demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--default t-size-s t-tag--dark"
    >
      标签 小
    </span>
     
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      标签 中
    </span>
     
    <span
      class="t-tag t-tag--default t-size-l t-tag--dark"
    >
      标签 大
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--primary t-size-s t-tag--dark"
    >
      标签 小
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark"
    >
      标签 中
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-l t-tag--dark"
    >
      标签 大
    </span>
  </div>
</div>
`;

exports[`Tag theme demo works fine 1`] = `
<div
  class="tdesign-tag-theme"
>
  <div
    class="tdesign-demo-block"
  >
    
    深色
    
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--success t-size-m t-tag--dark"
    >
      标签二
    </span>
     
    <span
      class="t-tag t-tag--info t-size-m t-tag--dark"
    >
      标签三
    </span>
     
    <span
      class="t-tag t-tag--warning t-size-m t-tag--dark"
    >
      标签四
    </span>
     
    <span
      class="t-tag t-tag--danger t-size-m t-tag--dark"
    >
      标签五
    </span>
  </div>
   
  <div
    class="tdesign-demo-block light"
  >
    
    浅色
    
    <span
      class="t-tag t-tag--primary t-size-m t-tag--light"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--success t-size-m t-tag--light"
    >
      标签二
    </span>
     
    <span
      class="t-tag t-tag--info t-size-m t-tag--light"
    >
      标签三
    </span>
     
    <span
      class="t-tag t-tag--warning t-size-m t-tag--light"
    >
      标签四
    </span>
     
    <span
      class="t-tag t-tag--danger t-size-m t-tag--light"
    >
      标签五
    </span>
  </div>
   
  <div
    class="tdesign-demo-block plain"
  >
    
    朴素
    
    <span
      class="t-tag t-tag--primary t-size-m t-tag--plain"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--success t-size-m t-tag--plain"
    >
      标签二
    </span>
     
    <span
      class="t-tag t-tag--info t-size-m t-tag--plain"
    >
      标签三
    </span>
     
    <span
      class="t-tag t-tag--warning t-size-m t-tag--plain"
    >
      标签四
    </span>
     
    <span
      class="t-tag t-tag--danger t-size-m t-tag--plain"
    >
      标签五
    </span>
  </div>
</div>
`;
